--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="./LinkedList/lru-cache.js"></script>
+    <script src="./LeetCode/20.有效的括号.js"></script>
     <title>Document</title>
 </head>
 <body>
