--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="./LeetCode/155.最小栈.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- <script src="./LeetCode/155.最小栈.js"></script> -->
+    <script src="./algorithm/剑指Offer/DeepCopy.js"></script>
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     invoke `testfunc` function to test LRUCache
-</body>
+  </body>
 </html>
